--- a/pages/hyperobjects.html
+++ b/pages/hyperobjects.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../css/style.css">
-  <link rel="shortcut icon" href="images/orb.jpg" />
+  <link rel="shortcut icon" href="../images/orb.jpg" />
   <title>hyperobjects</title>
 </head>
 <style>
@@ -179,7 +179,7 @@
   </div>
 
 
-    <div id="footer">
+  <div id="footer">
     <div id="footercontent">
       <p>  <a href="mailto:tomasallsop@gmail.com">tomasallsop@gmail.com </a> ● 0640381161</p>
     </div>
