--- a/pages/blog.html
+++ b/pages/blog.html
@@ -112,6 +112,7 @@
       <img  src="../images/blog/beeldenaanzee3.jpg" alt="art image 1">
       <p>Sincerity</p>
       </div>
+      <div id="texttest"> </div>
 
 
     <div id="texttest">
@@ -122,11 +123,11 @@
 Once on top of Riff, the whole perspective changes, because now you don't look up to it, but you look to your feet and what you're walking on; how it feels to walk on concrete. The idea of walking on top seemed exciting, and it was at first because of the barrel-less edge and the abyss-like look to it. But in reality, after being there for a while, you don't feel out of place in comparison to your view or you don't feel ginormous as the rock that you're on top of, you feel like your part of the scene.
 At the end the piece ends up feeling right on that space, because although one might be 7 meters above the ground, at the distance it matches with the rest of the flatness of Nederland.
     <img  src="../images/blog/landart1.jpg" alt="art image 1">
-    <p>Studio</p>
+    <p>Riff 1</p>
     <img  src="../images/blog/landart2.jpg" alt="art image 1">
-    <p>Workshop</p>
+    <p>Riff 2</p>
     <img  src="../images/blog/landart3.jpg" alt="art image 1">
-    <p>Sincerity</p>
+    <p>Riff 3</p>
     </div>
   </div>
 
