--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
         <p>◢ Links and phrases</p>
       </div>
       <p><a href="pages/hyperobjects.html" target=>Hyperobjects </a></p>
+      <br>
       <p><a href="https://www.pupuladuplex.com" target="_blank">Concerted heads</a></p>
       <p><a href="https://www.youtube.com/watch?v=ZQQGEce1oyg" target="_blank">The fluidity of graphite</a></p>
       <p><a href="https://www.youtube.com/shorts/Fe7H2pbRVbM" target="_blank">Concerning interpretations</a></p>
@@ -352,19 +353,30 @@
       <p><a href="https://www.widewalls.ch/magazine/zombie-art-formalism" target="_blank">Zombie formalism</a></p>
       <p><a href="https://issuu.com/samzdat/docs/ernst_friedrich_krieg_dem_kriege__g" target="_blank">Krieg dem kriege</a></p>
       <p>The smell of archaic fuels</p>
+      <p>Violate your innocense</p>
       <p>Screams ignite the oil sky</p>
       <p>Petro chemical haze</p>
+      <p>Organ harvest festival</p>
+      <p>Undermine your privilege</p>
       <p>The spectre of uselessness</p>
       <p>The electronic janitors</p>
       <p>Questioning the recognition</p>
       <p>The century of the self</p>
       <p>Body without organs</p>
+      <p>Exit through the giftshop</p>
+      <p>Arrogance and naivity</p>
+      <p>Implosion of meaning</p>
       <p>irrevocably bourgeois</p>
       <p>Iron tooled sky</p>
+      <p>Planes without men</p>
+      <p>Radioactive rat race</p>
       <p>Humane restraints</p>
+      <p>Hyperreal nebula</p>
       <p>Spinal Catastrophism</p>
       <p>Urban reflections</p>
+      <p>Requiem for the media</p>
       <p>folded, spindled and mutilated</p>
+      <p>Werben, werben</p>
       <p>Iconoplastic</p>
       <p>The Factory war</p>
     </div>
