--- a/index.html
+++ b/index.html
@@ -302,9 +302,7 @@
     </div>
 
     <div id="column2">
-
-
-          <div id="texttest">
+      <div id="texttest">
         <p>◢ The schedule of addiction, drugs, and even escape routes by kids... it was sickening.</p>
         <p>I know it does not compare to the grace and mercies of the Saviour, but as I have had time to digest all that has been written, I still weep for what has been described.</p>
       </div>
@@ -333,7 +331,7 @@
           <source src="audio/acidmusic.mp3" type="audio/mpeg">
           Your browser does not support the audio element.
         </audio>
-</div>
+      </div>
 
     </div>
 
@@ -342,6 +340,7 @@
         <p>◢ Links and phrases</p>
       </div>
       <p><a href="pages/hyperobjects.html" target=>Hyperobjects </a></p>
+      <p><a href="pages/fetishobjects.html" target=>Fetishobjects</a></p>
       <br>
       <p><a href="https://www.pupuladuplex.com" target="_blank">Concerted heads</a></p>
       <p><a href="https://www.youtube.com/watch?v=ZQQGEce1oyg" target="_blank">The fluidity of graphite</a></p>
