--- a/pages/hyperobjects.html
+++ b/pages/hyperobjects.html
@@ -32,59 +32,59 @@
   <div id="columns">
     <div id="imagecolumn">
       <div id="texttest">
-        <img class="column2image" src="../images/image1.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image1.png" alt="art image 1">
         <p>Hyperobject 1</p>
-        <img class="column2image" src="../images/image2.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image2.png" alt="art image 1">
         <p>Hyperobject 2</p>
-        <img class="column2image" src="../images/image3.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image3.png" alt="art image 1">
         <p>Hyperobject 3</p>
-        <img class="column2image" src="../images/image4.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image4.png" alt="art image 1">
         <p>Hyperobject 4</p>
-        <img class="column2image" src="../images/image5.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image5.png" alt="art image 1">
         <p>Hyperobject 5</p>
-        <img class="column2image" src="../images/image6.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image6.png" alt="art image 1">
         <p>Hyperobject 6</p>
-        <img class="column2image" src="../images/image7.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image7.png" alt="art image 1">
         <p>Hyperobject 7</p>
-        <img class="column2image" src="../images/image8.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image8.png" alt="art image 1">
         <p>Hyperobject 8</p>
-        <img class="column2image" src="../images/image9.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image9.png" alt="art image 1">
         <p>Hyperobject 9</p>
-        <img class="column2image" src="../images/image10.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image10.png" alt="art image 1">
         <p>Hyperobject 10</p>
-        <img class="column2image" src="../images/image11.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image11.png" alt="art image 1">
         <p>Hyperobject 11</p>
-        <img class="column2image" src="../images/image12.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image12.png" alt="art image 1">
         <p>Hyperobject 12</p>
-        <img class="column2image" src="../images/image13.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image13.png" alt="art image 1">
         <p>Hyperobject 13</p>
-        <img class="column2image" src="../images/image14.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image14.png" alt="art image 1">
         <p>Hyperobject 14</p>
-        <img class="column2image" src="../images/image15.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image15.png" alt="art image 1">
         <p>Hyperobject 15</p>
-        <img class="column2image" src="../images/image16.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image16.png" alt="art image 1">
         <p>Hyperobject 16</p>
-        <img class="column2image" src="../images/image17.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image17.png" alt="art image 1">
         <p>Hyperobject 17</p>
-        <img class="column2image" src="../images/image18.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image18.png" alt="art image 1">
         <p>Hyperobject 18</p>
-        <img class="column2image" src="../images/image19.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image19.png" alt="art image 1">
         <p>Hyperobject 19</p>
-        <img class="column2image" src="../images/image20.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image20.png" alt="art image 1">
         <p>Hyperobject 20</p>
-        <img class="column2image" src="../images/image21.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image21.png" alt="art image 1">
         <p>Hyperobject 21</p>
-        <img class="column2image" src="../images/image22.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image22.png" alt="art image 1">
         <p>Hyperobject 22</p>
-        <img class="column2image" src="../images/image23.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/mage23.png" alt="art image 1">
         <p>Hyperobject 23</p>
-        <img class="column2image" src="../images/image24.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image24.png" alt="art image 1">
         <p>Hyperobject 24</p>
-        <img class="column2image" src="../images/image25.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image25.png" alt="art image 1">
         <p>Hyperobject 25</p>
-        <img class="column2image" src="../images/image26.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image26.png" alt="art image 1">
         <p>Hyperobject 26</p>
-        <img class="column2image" src="../images/image27.png" alt="art image 1">
+        <img class="column2image" src="../images/hyperobjects/image27.png" alt="art image 1">
         <p>Hyperobject 27</p>
       </div>
     </div>
@@ -148,6 +148,7 @@
         <p>◢ Links and phrases</p>
       </div>
       <p><a href="hyperobjects.html" target=>Hyperobjects █</a></p>
+      <p><a href="fetishobjects.html" target=>Fetishobjects</a></p>
       <br>
       <p><a href="https://www.pupuladuplex.com" target="_blank">Concerted heads</a></p>
       <p><a href="https://www.youtube.com/watch?v=ZQQGEce1oyg" target="_blank">The fluidity of graphite</a></p>
