--- a/pages/fetishobjects.html
+++ b/pages/fetishobjects.html
@@ -24,6 +24,7 @@
 
   <div id="columns">
     <div id="imagecolumn">
+        <div id="texttest">
       <img class="column2image" src="../images/fetishobjects/image1.jpg" alt="art image 1">
       <p>Fetishobject 1</p>
       <img class="column2image" src="../images/fetishobjects/image2.jpg" alt="art image 1">
@@ -78,7 +79,7 @@
       <p>Fetishobject 26</p>
       <img class="column2image" src="../images/fetishobjects/image27.jpg" alt="art image 1">
       <p>Fetishobject 27</p>
-
+</div>
     </div>
 
     <div id="column2">
