--- a/pages/fetishobjects.html
+++ b/pages/fetishobjects.html
@@ -13,6 +13,12 @@
     background: rgb(172, 172, 172);
     background: radial-gradient(circle, rgba(172, 172, 172, 1) 0%, rgba(80, 80, 80, 1) 0%, rgba(66, 66, 66, 1) 11%, rgba(91, 90, 90, 1) 34%, rgba(0, 0, 0, 1) 100%);
   }
+
+  @media only screen and (max-width : 1000px) {
+  #footer {
+    visibility: hidden;
+  }
+}
 </style>
 
 <body>
