--- a/pages/fetishobjects.html
+++ b/pages/fetishobjects.html
@@ -19,6 +19,12 @@
     visibility: hidden;
   }
 }
+
+  @media only screen and (min-width : 1001px) {
+    #column2 {
+      height: 86.4vh;
+    }
+}
 </style>
 
 <body>
