--- a/pages/fetishobjects.html
+++ b/pages/fetishobjects.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../css/style.css">
-  <title>Fetish</title>
+  <link rel="shortcut icon" href="../images/orb.jpg" />
+  <title>Fetishobjects</title>
 </head>
 <style>
   body {
