--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="images/orb.jpg" />
+  <meta name="description" content="Tom Allsop official art website.">
+  <meta name="keywords" content="Tom Allsop, tom allsop, tomasallsop">
+  <meta name="author" content="Tom Allsop">
   <title>Tom Allsop</title>
 </head>
 
