--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="images/orb.jpg" />
-  <meta name="description" content="Tom Allsop official art website.">
+  <meta name="description" content="Tom Allsop's digital objects.">
   <meta name="keywords" content="Tom Allsop, tom allsop, tomasallsop">
   <meta name="author" content="Tom Allsop">
   <title>Tom Allsop</title>
@@ -306,6 +306,20 @@
 
     <div id="column2">
       <div id="texttest">
+        <p>◢ When the haze becomes too thick.</p>
+        <p>The only constant flares.</p>
+        <p>Like a lantern with no shadows.</p>
+        <p>◢ When the body begins to weigh.</p>
+        <p>The only constant flares.</p>
+        <p>Like a lighthouse with no sea.</p>
+        <p>◢ When the fishes start to float.</p>
+        <p>The only constant flares.</p>
+        <p>Like a pattern with no recognition.</p>
+        <p>◢ Only the glare of the gas flare.</p>
+        <p>Can open your eyes.</p>
+        <p>To the beauty of the present.</p>
+      </div>
+      <div id="texttest">
         <p>◢ The schedule of addiction, drugs, and even escape routes by kids... it was sickening.</p>
         <p>I know it does not compare to the grace and mercies of the Saviour, but as I have had time to digest all that has been written, I still weep for what has been described.</p>
       </div>
@@ -348,6 +362,7 @@
       <p><a href="https://www.pupuladuplex.com" target="_blank">Concerted heads</a></p>
       <p><a href="https://www.youtube.com/watch?v=ZQQGEce1oyg" target="_blank">The fluidity of graphite</a></p>
       <p><a href="https://www.youtube.com/shorts/Fe7H2pbRVbM" target="_blank">Concerning interpretations</a></p>
+      <p><a href="https://www.youtube.com/watch?v=7QbV6QVfMU4&t=28s" target="_blank">Keep it awake</a></p>
       <p><a href="https://www.eliotallsop.com" target="_blank">Cyberiad</a></p>
       <p><a href="https://www.youtube.com/watch?v=BMKV3GgBVsk" target="_blank">Abandoned weapons range</a></p>
       <p><a href="https://www.youtube.com/watch?v=7b922U1_7CM" target="_blank">Neon origami</a></p>
@@ -369,11 +384,19 @@
       <p>Arrogance and naivity</p>
       <p>Implosion of meaning</p>
       <p>irrevocably bourgeois</p>
+      <p>The glare of the gas flare</p>
+      <p>Siliconobjects</p>
       <p>Iron tooled sky</p>
+      <p>The Spectacle</p>
+      <p>Ballisticobjects</p>
       <p>Planes without men</p>
       <p>Radioactive rat race</p>
+      <p>Soot stained teeth</p>
       <p>Humane restraints</p>
+      <p>Meatobjects</p>
+      <p>The Spectacle</p>
       <p>Hyperreal nebula</p>
+      <p>A dog with no teeth</p>
       <p>Spinal Catastrophism</p>
       <p>Urban reflections</p>
       <p>Requiem for the media</p>
