--- a/pages/hyperobjects.html
+++ b/pages/hyperobjects.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="shortcut icon" href="../images/orb.jpg" />
-  <meta name="description" content="Tom Allsop official art website.">
+  <meta name="description" content="Tom Allsop's digital objects.">
   <meta name="keywords" content="Tom Allsop, tom allsop, tomasallsop">
   <meta name="author" content="Tom Allsop">
   <title>hyperobjects</title>
@@ -156,12 +156,14 @@
       <p><a href="https://www.pupuladuplex.com" target="_blank">Concerted heads</a></p>
       <p><a href="https://www.youtube.com/watch?v=ZQQGEce1oyg" target="_blank">The fluidity of graphite</a></p>
       <p><a href="https://www.youtube.com/shorts/Fe7H2pbRVbM" target="_blank">Concerning interpretations</a></p>
+      <p><a href="https://www.youtube.com/watch?v=7QbV6QVfMU4&t=28s" target="_blank">Keep it awake</a></p>
       <p><a href="https://www.eliotallsop.com" target="_blank">Cyberiad</a></p>
       <p><a href="https://www.youtube.com/watch?v=BMKV3GgBVsk" target="_blank">Abandoned weapons range</a></p>
       <p><a href="https://www.youtube.com/watch?v=7b922U1_7CM" target="_blank">Neon origami</a></p>
       <p><a href="https://thoughtmaybe.com/cant-get-you-out-of-my-head/#top" target="_blank">Can't get you out of my head</a></p>
       <p><a href="https://www.widewalls.ch/magazine/zombie-art-formalism" target="_blank">Zombie formalism</a></p>
       <p><a href="https://issuu.com/samzdat/docs/ernst_friedrich_krieg_dem_kriege__g" target="_blank">Krieg dem kriege</a></p>
+        <br>
       <p>The smell of archaic fuels</p>
       <p>Violate your innocense</p>
       <p>Screams ignite the oil sky</p>
@@ -177,11 +179,19 @@
       <p>Arrogance and naivity</p>
       <p>Implosion of meaning</p>
       <p>irrevocably bourgeois</p>
+      <p>The glare of the gas flare</p>
+      <p>Siliconobjects</p>
       <p>Iron tooled sky</p>
+      <p>The Spectacle</p>
+      <p>Ballisticobjects</p>
       <p>Planes without men</p>
       <p>Radioactive rat race</p>
+      <p>Soot stained teeth</p>
       <p>Humane restraints</p>
+      <p>Meatobjects</p>
+      <p>The Spectacle</p>
       <p>Hyperreal nebula</p>
+      <p>A dog with no teeth</p>
       <p>Spinal Catastrophism</p>
       <p>Urban reflections</p>
       <p>Requiem for the media</p>
