--- a/pages/hyperobjects.html
+++ b/pages/hyperobjects.html
@@ -13,15 +13,11 @@
   <title>hyperobjects</title>
 </head>
 <style>
-  body {
-    background: rgb(172, 172, 172);
-    background: radial-gradient(circle, rgba(172, 172, 172, 1) 0%, rgba(80, 80, 80, 1) 10%, rgba(66, 66, 66, 1) 21%, rgba(91, 90, 90, 1) 53%, rgba(0, 0, 0, 1) 100%);
-  }
   @media only screen and (max-width : 1000px) {
-  #footer {
-    visibility: hidden;
+    #footer {
+      visibility: hidden;
+    }
   }
-}
 </style>
 
 <body>
@@ -153,17 +149,16 @@
       <p><a href="hyperobjects.html" target=>Hyperobjects █</a></p>
       <p><a href="fetishobjects.html" target=>Fetishobjects</a></p>
       <br>
-      <p><a href="https://www.pupuladuplex.com" target="_blank">Concerted heads</a></p>
-      <p><a href="https://www.youtube.com/watch?v=ZQQGEce1oyg" target="_blank">The fluidity of graphite</a></p>
-      <p><a href="https://www.youtube.com/shorts/Fe7H2pbRVbM" target="_blank">Concerning interpretations</a></p>
-      <p><a href="https://www.youtube.com/watch?v=7QbV6QVfMU4&t=28s" target="_blank">Keep it awake</a></p>
-      <p><a href="https://www.eliotallsop.com" target="_blank">Cyberiad</a></p>
-      <p><a href="https://www.youtube.com/watch?v=BMKV3GgBVsk" target="_blank">Abandoned weapons range</a></p>
-      <p><a href="https://www.youtube.com/watch?v=7b922U1_7CM" target="_blank">Neon origami</a></p>
-      <p><a href="https://thoughtmaybe.com/cant-get-you-out-of-my-head/#top" target="_blank">Can't get you out of my head</a></p>
-      <p><a href="https://www.widewalls.ch/magazine/zombie-art-formalism" target="_blank">Zombie formalism</a></p>
-      <p><a href="https://issuu.com/samzdat/docs/ernst_friedrich_krieg_dem_kriege__g" target="_blank">Krieg dem kriege</a></p>
-        <br>
+      <p>Concerted heads</p>
+      <p>The fluidity of graphite</p>
+      <p>Concerning interpretations</p>
+      <p>Keep it awake</p>
+      <p>Cyberiad</p>
+      <p>Abandoned weapons range</p>
+      <p>Neon origami</p>
+      <p>Can't get you out of my head</p>
+      <p>Zombie formalism</p>
+      <p>Krieg dem kriege</p>
       <p>The smell of archaic fuels</p>
       <p>Violate your innocense</p>
       <p>Screams ignite the oil sky</p>
@@ -175,26 +170,58 @@
       <p>Questioning the recognition</p>
       <p>The century of the self</p>
       <p>Body without organs</p>
+      <p>Illicit practice</p>
+      <p>Funnytown</p>
+      <p>The emperor moth</p>
+      <p>The Shadow operators</p>
       <p>Exit through the giftshop</p>
       <p>Arrogance and naivity</p>
       <p>Implosion of meaning</p>
       <p>irrevocably bourgeois</p>
       <p>The glare of the gas flare</p>
+      <p>Teatro Grottesco</p>
+      <p>The flaying men</p>
+      <p>The age of suspicion</p>
       <p>Siliconobjects</p>
+      <p>Tortured postures</p>
+      <p>Esoteric procedure</p>
       <p>Iron tooled sky</p>
+      <p>Harmfull miasmas</p>
+      <p>Ennuchs</p>
+      <p>Memoranda</p>
+      <p>The sythe of saturn</p>
+      <p>The branded prison hulks</p>
+      <p>Stark isolated forays</p>
+      <p>On a eerily pacified battleground</p>
+      <p>Spat and spread across the pavement</p>
+      <p>Aborted or deliberately abandoned</p>
+      <p>Idiosyncratic nightmares</p>
+      <p>End of the pier</p>
+      <p>Formations of bombers</p>
+      <p>His bark is worse than his bite</p>
       <p>The Spectacle</p>
+      <p>Diseased mania</p>
+      <p>Tank tracks untangled</p>
       <p>Ballisticobjects</p>
       <p>Planes without men</p>
       <p>Radioactive rat race</p>
       <p>Soot stained teeth</p>
       <p>Humane restraints</p>
+      <p>Howling edifices</p>
       <p>Meatobjects</p>
+      <p>Shibboleth</p>
+      <p>Urn burial</p>
+      <p>Birthing graves</p>
       <p>The Spectacle</p>
+      <p>A soft voice whispers nothing</p>
       <p>Hyperreal nebula</p>
       <p>A dog with no teeth</p>
       <p>Spinal Catastrophism</p>
       <p>Urban reflections</p>
       <p>Requiem for the media</p>
+      <p>Hypertrophied organs kept in formaldehyde</p>
+      <p>Twitched like a mass of hatched spiderlings</p>
+      <p>The paramilitary imagery of the avant garde</p>
       <p>folded, spindled and mutilated</p>
       <p>Werben, werben</p>
       <p>Iconoplastic</p>
@@ -202,12 +229,11 @@
     </div>
   </div>
   </div>
-  </div>
 
 
   <div id="footer">
     <div id="footercontent">
-      <p>  <a href="mailto:tomasallsop@gmail.com">tomasallsop@gmail.com </a> ● 0640381161</p>
+      <p> <a href="mailto:tomasallsop@gmail.com">tomasallsop@gmail.com </a> ● 0640381161</p>
     </div>
   </div>
 
