--- a/pages/hyperobjects.html
+++ b/pages/hyperobjects.html
@@ -186,7 +186,7 @@
       <p>Tortured postures</p>
       <p>Esoteric procedure</p>
       <p>Iron tooled sky</p>
-      <p>Harmfull miasmas</p>
+      <p>Harmful miasmas</p>
       <p>Ennuchs</p>
       <p>Memoranda</p>
       <p>The sythe of saturn</p>
