--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       Babies cried tears of motor oil, lubricating the armoured vehicles.
       </div>
       <div id="texttest">
-      Janus danced, marionettes on strings, limbs contorting into impossible shapes.
+      I danced, marionettes on strings, limbs contorting into impossible shapes.
       </div>
       <div id="texttest">
       A lullaby of code.
