--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
       </div>
 
       <div id="texttest">
-         Rusted car carcasses, fallen giants.
+        Rusted car carcasses, fallen giants.
       </div>
       <div id="texttest">
         Marbles on a polished floor, impossible to gather.
       </div>
       <div id="texttest">
-        Scent of decay and the echoes of forgotten arithmetic.
+        Scent of decay echoes forgotten arithmetic.
       </div>
       <div id="texttest">
         The radio played a symphony of static.
@@ -75,16 +75,16 @@
       </div>
 
       <div id="texttest">
-       Locked up in the pleasure piers like lepers in leprosariums.
+        Locked up in the pleasure piers like lepers in leprosariums.
       </div>
       <div id="texttest">
-      Rubber and tarmac.
+        Rubber and tarmac.
       </div>
       <div id="texttest">
-      Bats stuck as dry leaves to runway concrete.
+        Bats stuck as dry leaves to runway concrete.
       </div>
       <div id="texttest">
-      Depicting the loa of roads and highways.
+        Depicting the loa of roads and highways.
       </div>
 
       <div id="texttest">
@@ -92,16 +92,33 @@
       </div>
 
       <div id="texttest">
-      Babies cried tears of motor oil, lubricating the armoured vehicles.
+        Babies cried tears of motor oil, lubricating the armoured vehicles.
       </div>
       <div id="texttest">
-      I danced, marionettes on strings, limbs contorting into impossible shapes.
+        I danced, marionettes on strings, limbs contorting into impossible shapes.
       </div>
       <div id="texttest">
-      A lullaby of code.
+        A lullaby of code.
       </div>
       <div id="texttest">
-      Buried urns and birthed graves.
+        Melding flesh and circuits in a strange embrace.
+      </div>
+
+      <div id="texttest">
+        -
+      </div>
+
+      <div id="texttest">
+        Monument to our excesses.
+      </div>
+      <div id="texttest">
+        Image monoliths, their true purpose unknown.
+      </div>
+      <div id="texttest">
+        Buried urns and birthed graves.
+      </div>
+      <div id="texttest">
+        Barking at future moons, a futile gesture.
       </div>
 
 
@@ -120,8 +137,8 @@
         <p>Concerning interpretations</p>
         <p>Keep it awake</p>
         <p>Cyberiad</p>
-        <p>Abandoned weapons range</p>
         <p>Neon origami</p>
+        <p>Abandoned weapons range</p>
         <p>Can't get you out of my head</p>
         <p>Zombie formalism</p>
         <p>Krieg dem kriege</p>
