--- a/index.html
+++ b/index.html
@@ -23,22 +23,6 @@
 
   <div id="columns">
     <div id="column1">
-      <div id="texttest">
-        How did the bacteria come to see the petri dish differently than you do?
-      </div>
-      <div id="texttest">
-        The petri dish does not exhibit any sort of visual perception.
-      </div>
-      <div id="texttest">
-        The petri dish is simply the vessel of exposure.
-      </div>
-      <div id="texttest">
-        Nothing is at a different distance from the petri dish than it is from the bacteria.
-      </div>
-
-      <div id="texttest">
-        -
-      </div>
 
       <div id="texttest">
         A long time between suns I held the stale overcoat.
@@ -95,7 +79,7 @@
         Babies cried tears of motor oil, lubricating the armoured vehicles.
       </div>
       <div id="texttest">
-        I danced, marionettes on strings, limbs contorting into impossible shapes.
+        I danced as marionettes on strings, limbs contorting into impossible shapes.
       </div>
       <div id="texttest">
         A lullaby of code.
@@ -121,6 +105,24 @@
         Barking at future moons, a futile gesture.
       </div>
 
+      <div id="texttest">
+        -
+      </div>
+
+      <div id="texttest">
+        How did the bacteria come to see the petri dish differently than you do?
+      </div>
+      <div id="texttest">
+        The petri dish does not exhibit any sort of visual perception.
+      </div>
+      <div id="texttest">
+        The petri dish is simply the vessel of exposure.
+      </div>
+      <div id="texttest">
+        Nothing is at a different distance from the petri dish than it is from the bacteria.
+      </div>
+
+
 
 
 
@@ -135,13 +137,19 @@
         <p>Concerted heads</p>
         <p>The fluidity of graphite</p>
         <p>Concerning interpretations</p>
+        <p>Interpassivity</p>
         <p>Keep it awake</p>
+        <p>Scarifying</p>
         <p>Cyberiad</p>
         <p>Neon origami</p>
         <p>Abandoned weapons range</p>
         <p>Can't get you out of my head</p>
+        <p>Delicate shadings</p>
+        <p>Complete inertia</p>
         <p>Zombie formalism</p>
         <p>Krieg dem kriege</p>
+        <p>Sacrosanct</p>
+        <p>Abstinence in volition</p>
         <p>The smell of archaic fuels</p>
         <p>Violate your innocense</p>
         <p>Screams ignite the oil sky</p>
@@ -154,39 +162,55 @@
         <p>The century of the self</p>
         <p>Body without organs</p>
         <p>Illicit practice</p>
+        <p>Prinz vogelfrei</p>
+        <p>Locust eaters</p>
+        <p>Scabrous</p>
         <p>Funnytown</p>
         <p>The emperor moth</p>
-        <p>The Shadow operators</p>
+        <p>The shadow operators</p>
         <p>Exit through the giftshop</p>
         <p>Arrogance and naivity</p>
         <p>Implosion of meaning</p>
-        <p>irrevocably bourgeois</p>
+        <p>Irrevocably bourgeois</p>
         <p>The glare of the gas flare</p>
-        <p>Teatro Grottesco</p>
+        <p>Black insect laughter</p>
+        <p>Teatro grottesco</p>
         <p>The flaying men</p>
         <p>The age of suspicion</p>
         <p>Siliconobjects</p>
         <p>Tortured postures</p>
         <p>Esoteric procedure</p>
         <p>Iron tooled sky</p>
-        <p>Harmfull miasmas</p>
+        <p>Harmful miasmas</p>
+        <p>Götterdämmerung</p>
         <p>Hecatomb</p>
         <p>Ennuchs</p>
         <p>Memoranda</p>
+        <p>Physiognomy</p>
         <p>The sythe of saturn</p>
+        <p>Undifferentiated tissue</p>
         <p>The branded prison hulks</p>
         <p>Stark isolated forays</p>
+        <p>Hail of crystal skulls</p>
         <p>On a eerily pacified battleground</p>
         <p>Spat and spread across the pavement</p>
         <p>Aborted or deliberately abandoned</p>
         <p>Idiosyncratic nightmares</p>
+        <p>Phlegm constructs</p>
         <p>End of the pier</p>
         <p>Formations of bombers</p>
         <p>His bark is worse than his bite</p>
         <p>The works of mourning</p>
+        <p>cynical exercises</p>
+        <p>Black bile</p>
+        <p>Cherem</p>
+        <p>Kadosh</p>
+        <p>Nadir</p>
+        <p>Homo sacred</p>
         <p>The Spectacle</p>
-        <p>Fetish objects</p>
+        <p>Fetishobjects</p>
         <p>Diseased mania</p>
+        <p>Permissus avibus</p>
         <p>Tank tracks untangled</p>
         <p>Ballisticobjects</p>
         <p>Planes without men</p>
@@ -195,11 +219,15 @@
         <p>Humane restraints</p>
         <p>Howling edifices</p>
         <p>Specters of marx</p>
+        <p>Labyrinthine</p>
+        <p>Paroxysm</p>
+        <p>Monads</p>
+        <p>Entelechy</p>
         <p>Meatobjects</p>
         <p>Shibboleth</p>
         <p>Urn burial</p>
         <p>Birthing graves</p>
-        <p>Hyper objects</p>
+        <p>Hyperobjects</p>
         <p>The Spectacle</p>
         <p>Their might of excess</p>
         <p>A soft voice whispers nothing</p>
@@ -208,13 +236,24 @@
         <p>Spinal Catastrophism</p>
         <p>Urban reflections</p>
         <p>Requiem for the media</p>
-        <p>Hypertrophied organs kept in formaldehyde</p>
-        <p>Twitched like a mass of hatched spiderlings</p>
-        <p>The paramilitary imagery of the avant garde</p>
-        <p>folded, spindled and mutilated</p>
         <p>Werben, werben</p>
         <p>Iconoplastic</p>
         <p>The Factory war</p>
+        <p>Dragged into paradise</p>
+        <p>Kingdom of crooked mirrors</p>
+        <p>The sparse furniture of the mind</p>
+        <p>Hypertrophied organs kept in formaldehyde</p>
+        <p>Twitched like a mass of hatched spiderlings</p>
+        <p>The terminal documents of the 21th century</p>
+        <p>The paramilitary imagery of the avant garde</p>
+        <p>Millions died in the mud flats</p>
+        <p>Bureaucrats of spectral departments</p>
+        <p>Consulting an invisible mirror</p>
+        <p>The cycle of non being</p>
+        <p>Ricochets across the crystal desert</p>
+        <p>Abandonment will be his salvation</p>
+        <p>Folded, spindled and mutilated</p>
+
       </div>
     </div>
 
