--- a/index.html
+++ b/index.html
@@ -200,8 +200,10 @@
         <p>End of the pier</p>
         <p>Formations of bombers</p>
         <p>His bark is worse than his bite</p>
+        <p>Mythology of the clown</p>
         <p>The works of mourning</p>
-        <p>cynical exercises</p>
+        <p>Cynical exercises</p>
+        <p>The reality asylum</p
         <p>Black bile</p>
         <p>Cherem</p>
         <p>Kadosh</p>
@@ -213,12 +215,14 @@
         <p>Permissus avibus</p>
         <p>Tank tracks untangled</p>
         <p>Ballisticobjects</p>
+        <p>Fearful symmetry</p
         <p>Planes without men</p>
         <p>Radioactive rat race</p>
         <p>Soot stained teeth</p>
         <p>Humane restraints</p>
         <p>Howling edifices</p>
         <p>Specters of marx</p>
+        <p>The thyrsus staff</p>
         <p>Labyrinthine</p>
         <p>Paroxysm</p>
         <p>Monads</p>
@@ -230,7 +234,10 @@
         <p>Hyperobjects</p>
         <p>The Spectacle</p>
         <p>Their might of excess</p>
+        <p>The lost cause of poetry</p>
         <p>A soft voice whispers nothing</p>
+        <p>Dark starless venice</p>
+        <p>Boiled out eyes</p>
         <p>Hyperreal nebula</p>
         <p>A dog with no teeth</p>
         <p>Spinal Catastrophism</p>
@@ -241,7 +248,12 @@
         <p>The Factory war</p>
         <p>Dragged into paradise</p>
         <p>Kingdom of crooked mirrors</p>
+        <p>The rubbish of a possible carnival</p>
         <p>The sparse furniture of the mind</p>
+        <p>Disordered by the weight of dreams</p>
+        <p>Ageless rituals of the cockroach world</p>
+        <p>The misery of imprisoned matter</p>
+        <p>Slowly fading, wilting before our eyes</p>
         <p>Hypertrophied organs kept in formaldehyde</p>
         <p>Twitched like a mass of hatched spiderlings</p>
         <p>The terminal documents of the 21th century</p>
